<resources>
    <string name="app_name">Prima Berita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="photos_count">%1$d of %2$d</string>
    <string name="opening_video">Opening video</string>
    <string name="opening_audio">Opening audio</string>
    <string name="loading">Loading..</string>
    <string name="save">Save</string>
    <string name="downloading">Downloading..</string>
    <string name="downloadmanager_disabled">Download manager needs to be enabled</string>
    <string name="file_audio">Audio</string>
    <string name="file_video">Video</string>
    <string name="file_image">Image</string>
    <string name="permissions_required">You need to accept all required permissions to access this content.</string>
    <string name="post_details">Details</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="share_post">%1$s on %2$s \n%3$s</string>
    <string name="share_post_n">WpConnect | %1$s | %2$s</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No Comments</string>
    <string name="username_password_not_correct">Username or Password is not correct</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="reply_to">Reply to %1$s</string>
    <string name="dummy_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="no_posts">No Posts</string>
    <string name="type_query">Cari Berita...</string>
    <string name="wp_connect">Prima Berita</string>
    <string name="videos">Videos</string>
    <string name="no_youtube_videos">No YouTube Videos</string>
    <string name="video">Video</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="count">%1$d</string>
    <string name="no_social_posts">No Social Posts</string>
    <string name="category_count_tag">%1$s, + %2$d more&#8230;</string>
    <string name="no_favorites">No Favorites</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="no_search_results">No Search Results</string>
    <string name="gallery">Gallery</string>
    <string name="internet_not_available">Internet Not Available</string>
    <string name="copyright_text">\nSource: %1$s</string>
    <string name="splash_screen_branding_bold">Prima</string>
    <string name="splash_screen_branding_thin">Berita</string>
    <string name="login_required">Please Login to Reply</string>
    <string name="favorites_section_wordpress">Posts</string>
    <string name="favorites_section_social">Social</string>
    <string name="favorites_section_youtube">Videos</string>
    <string name="session_expired">Session Expired. Please Login</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="mobile_data_wifi">You need to have Mobile Data or wifi to access this.</string>
    <string name="privacypolicy">Privacy Policy \n
    Prima Optimasi Indonesia built the PrimaBerita app as a Free app. This SERVICE is provided by Prima Optimasi Indonesia at no cost and is intended for use as is.\n
\n
    This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.\n
\n
    If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n
\n
    The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Prima Optimasi unless otherwise defined in this Privacy Policy.\n
\n
    Information Collection and Use\n
\n
    For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to username , email. The information that we request will be retained by us and used as described in this privacy policy.\n
\n
    The app does use third party services that may collect information used to identify you.\n
\n
    Link to privacy policy of third party service providers used by the app\n
\n
    Google Play Services\n
    AdMob\n
    Firebase Analytics\n
    Crashlytics\n
    Log Data\n
\n
    We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.\n
\n
    Cookies\n
\n
    Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'\s internal memory.\n
\n
    This Service does not use these “cookies" explicitly. However, the app may use third party code and libraries that use “cookies" to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n
\n
    Service Providers\n
\n
    We may employ third-party companies and individuals due to the following reasons:\n
\n
    To facilitate our Service;\n
    To provide the Service on our behalf;\n
    To perform Service-related services; or\n
    To assist us in analyzing how our Service is used.\n
    We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n
\n
    Security\n
\n
    We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n
\n
    Links to Other Sites\n
\n
    This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n
\n
    Children’s Privacy\n
\n
    These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.\n
\n
    Changes to This Privacy Policy\n
\n
    We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n
\n
    Contact Us\n
\n
    If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</string>
</resources>
