<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg_overlay" />

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="150dp"
        android:padding="10sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        app:srcCompat="@drawable/logopetak" />

    <TextView
        android:id="@+id/label_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_iv"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/wp_connect"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_tv"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white_30_percent"
            android:textColorLink="@color/white"
            android:textSize="14sp"
            app:backgroundTint="#80f9f9f9" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_30_percent"
            android:textColorLink="@color/white"
            android:textSize="14sp"
            app:backgroundTint="#80f9f9f9" />


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/container_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_password"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccent" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                app:backgroundTint="@android:color/white" />


        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            tools:visibility="visible" />


    </RelativeLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:minWidth="96dp"
        android:padding="16dp"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</RelativeLayout>
