<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/search" />


    <LinearLayout
        android:id="@+id/search_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_search" />

        <EditText
            android:id="@+id/search_field_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_query"
            android:imeActionLabel="Search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_30_percent"
            android:textSize="14sp" />

    </LinearLayout>


    <com.yayandroid.parallaxrecyclerview.ParallaxRecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_ll"
        android:layout_marginTop="8dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_results_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_search_results"
        android:visibility="invisible"
        tools:visibility="visible" />


</RelativeLayout>